Add testing, dependency injection

--- a/WebAPIDemo/wwwroot/Store1.css
+++ b/WebAPIDemo/wwwroot/Store1.css
@@ -206,7 +206,7 @@ main {
     padding: 0 1rem;
 }
 
-.btn {
+.btn, #checkout--btn {
     display: flex;
     justify-content: center;
     align-items: center;
